test/fail/optargs/variants_cannot_optarg.lily
#[
SyntaxError: Variant types cannot have default values.
    from variants_cannot_optarg.lily:7:
]#

enum Test {
    Check(*Integer),
    Blank
}
